--- a/index.html
+++ b/index.html
@@ -1670,7 +1670,28 @@
         });
     </script>
 
-    
+     <script>
+        // غیرفعال کردن راست‌کلیک
+        document.addEventListener("contextmenu", function (e) {
+            e.preventDefault();
+            alert("راست‌کلیک غیرفعال شده است.");
+        });
+
+        // غیرفعال کردن Ctrl+U و F12
+        document.addEventListener("keydown", function (e) {
+            // جلوگیری از Ctrl + U
+            if (e.ctrlKey && (e.key === "u" || e.key === "U")) {
+                e.preventDefault();
+                alert("مشاهده سورس کد غیرفعال شده است.");
+            }
+
+            // جلوگیری از F12
+            if (e.key === "F12") {
+                e.preventDefault();
+                alert("استفاده از ابزارهای توسعه‌دهنده غیرفعال شده است.");
+            }
+        });
+    </script>
     
 </body>
 
